<resources>
    <string name="app_name">Spirala-Biljaka</string>
    <string name="korist_1">korist 1</string>
    <string name="korist_2">korist 2</string>
    <string name="korist_3">korist 3</string>
    <string name="naziv_biljke">Naziv biljke</string>
    <string name="upozorenje">Upozorenje</string>
    <string name="slika_biljke">Slika etf.rma.spirale.biljke</string>
    <string name="jelo_1">jelo 1</string>
    <string name="jelo_2">jelo 2</string>
    <string name="jelo_3">jelo 3</string>
    <string name="profil_okusa">Profil okusa</string>
    <string name="zemljisni_tip">Zemljisni Tip</string>
    <string name="klimatski_tip">Klimatski Tip</string>
    <string name="porodica">Porodica</string>
    <string name="resetBtn">Reset</string>
    <string name="nova_biljka_btnTxt">Nova biljka</string>
    <string name="spasi_biljku_Btn">Spasi biljku</string>
    <string name="dodaj_jelo_Btn">Dodaj jelo</string>
    <string name="novo_jelo_hint">Novo jelo</string>
    <string name="uslikaj_biljku_Btn">Uslikaj biljku</string>
    <string name="slika_nove_biljke">Slika nove biljke koja se dodaje</string>
    <string name="dodajJeloBtn_izmijeniJelo">Izmijeni jelo</string>
    <string name="dodajJeloBtn_dodajJelo">Dodaj jelo</string>
    <string name="pretraga_biljka">Trazi biljku...</string>
    <string name="pretraga_btn">Brza\npretraga</string>
</resources>